--- a/.classpath
+++ b/.classpath
@@ -28,7 +28,6 @@
 	<classpathentry kind="lib" path="lib/jetty-util-6.1.21.jar"/>
 	<classpathentry kind="lib" path="lib/zookeeper-3.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="config"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
@@ -38,5 +37,6 @@
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="solr-resources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
