--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/jredis-1.0-rc1.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.9.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.9.1-sources.jar"/>
@@ -22,21 +21,23 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-2.5-20081211.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-6.1.21.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-util-6.1.21.jar"/>
-	<classpathentry kind="lib" path="lib/zookeeper-3.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="solr-resources"/>
+	<classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-6.1.6.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-6.1.6.jar"/>
+	<classpathentry kind="lib" path="lib/libthrift-r917130.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-2.5-6.1.6.jar"/>
+	<classpathentry kind="lib" path="lib/solr-core-1.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cassandra-trunk"/>
+	<classpathentry kind="lib" path="lib/jredis-1.0-rc2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
