--- a/ivy.xml
+++ b/ivy.xml
@@ -22,13 +22,30 @@
   <dependencies>
     <dependency org="junit" name="junit" rev="4.6" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.slf4j" name="slf4j-api" rev="1.5.8" conf="* -> *,!sources,!javadoc"/>
-    <dependency org="org.slf4j" name="slf4j-simple" rev="1.5.8" conf="* -> *,!sources,!javadoc"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.5.8" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-lang" name="commons-lang" rev="2.4" conf="* -> *,!sources,!javadoc"/>
     <dependency org="org.apache.lucene" name="lucene-core" rev="2.9.1" conf="*"/>
     <dependency org="org.apache.solr" name="solr-core" rev="1.4.0" conf="* -> *,!javadoc"/>
     <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
+
+    <dependency org="redis.clients" name="jedis" rev="1.3.0"  conf="* -> *,!sources,!javadoc"/>
+    <!--<dependency org="com.cloudera.zookeeper" name="zookeeper" rev="3.3.1-10" conf="* -> *,!sources,!javadoc"/>-->
+
+    <dependency org="libthrift" name="libthrift" rev="0.5" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.apache.cassandra" name="apache-cassandra" rev="0.7.0-rc1" conf="* -> *,!sources,!javadoc" />
+
+    <dependency org="com.thoughtworks.paranamer" name="paranamer-ant" rev="2.1" conf="* -> *,!sources,!javadoc"/>
+    <dependency org="junit" name="junit" rev="4.6" conf="* -> *,!sources,!javadoc"/>
+    <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="* -> *,!sources,!javadoc"/>
+    <dependency org="com.reardencommerce" name="clhm-production" rev="1.0" conf="* -> *,!sources,!javadoc"/>
+    
+    <!--<dependency org="com.cloudera.hadoop" name="hadoop-core" rev="0.20.2-320"/>
+	<dependency org="com.cloudera.hadoop" name="hadoop-streaming" rev="0.20.2-320"/>
+	<dependency org="net.sf.jopt-simple" name="jopt-simple" rev="3.2"/> -->
+
+    <dependency org="net.java.dev.jna" name="jna" rev="3.2.7"/>
   </dependencies>
 </ivy-module>
 
