--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,10 @@
 		<lucene.version>2.9.3</lucene.version>
 		<solr.version>1.4.0</solr.version>
 		<slf4j.version>1.6.1</slf4j.version>
-		<cassandra.version>0.7.0-beta2</cassandra.version>
+		<cassandra.version>0.7.0-rc1-SNAPSHOT-2010-10-25_12-57-56</cassandra.version>
 		<avro.version>1.4.0-fixes</avro.version>
 		<high.scale.version>1.1.2</high.scale.version>
-		<thrift.version>r959516</thrift.version>
-		<pelops.version>0.908-0.7.0-SNAPSHOT</pelops.version>
+		<thrift.version>0.5</thrift.version>
 		<st.deploy.dir>file://${basedir}/../mvnrepo</st.deploy.dir>
 	</properties>
 
