--- a/config/cassandra.yaml
+++ b/config/cassandra.yaml
@@ -91,24 +91,16 @@ snapshot_before_compaction: false
 # The threshold size in megabytes the binary memtable must grow to,
 # before it's submitted for flushing to disk.
 binary_memtable_throughput_in_mb: 256
-# The maximum time to leave a dirty memtable unflushed.
-# (While any affected columnfamilies have unflushed data from a
-# commit log segment, that segment cannot be deleted.)
-# This needs to be large enough that it won't cause a flush storm
-# of all your memtables flushing at once because none has hit
-# the size or count thresholds yet.
-memtable_flush_after_mins: 60
-# Size of the memtable in memory before it is flushed
-memtable_throughput_in_mb: 64
-# Number of objects in millions in the memtable before it is flushed
-memtable_operations_in_millions: 0.3
+
 
 column_index_size_in_kb: 64
-
-in_memory_compaction_limit_in_mb: 64
+in_memory_compaction_limit_in_mb: 128
 
 # commit log
 commitlog_directory: /tmp/cassandra/commitlog
+
+# saved caches
+saved_caches_directory: /tmp/cassandra/saved_caches
 
 # Size to allow commitlog to grow to before creating a new segment
 commitlog_rotation_threshold_in_mb: 128
