--- a/.classpath
+++ b/.classpath
@@ -19,25 +19,49 @@
 	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-simple-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="solr-resources"/>
 	<classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-6.1.6.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-util-6.1.6.jar"/>
-	<classpathentry kind="lib" path="lib/libthrift-r917130.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-2.5-6.1.6.jar"/>
 	<classpathentry kind="lib" path="lib/solr-core-1.4.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cassandra-trunk"/>
-	<classpathentry kind="lib" path="lib/jredis-1.0-rc2.jar"/>
+	<classpathentry kind="lib" path="lib/ant-1.6.5.jar"/>
+	<classpathentry kind="lib" path="lib/apache-cassandra-0.7.0-rc1.jar"/>
+	<classpathentry kind="lib" path="lib/asm-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/avalon-framework-4.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/clhm-production-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/core-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jna-3.2.7-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jna-3.2.7.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-2.1-6.1.6.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-api-2.1-6.1.6.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/libthrift-0.5.jar"/>
+	<classpathentry kind="lib" path="lib/logkit-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/paranamer-ant-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/paranamer-generator-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/qdox-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/snakeyaml-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/guava-r07.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-1.3.7.jar"/>
+	<classpathentry kind="lib" path="lib/high-scale-lib-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-asl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/jopt-simple-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/paranamer-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jug-asl-2.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
