--- a/ivy.xml
+++ b/ivy.xml
@@ -31,13 +31,12 @@
     <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
 
-    <dependency org="redis.clients" name="jedis" rev="1.3.0"  conf="* -> *,!sources,!javadoc"/>
     <!--<dependency org="com.cloudera.zookeeper" name="zookeeper" rev="3.3.1-10" conf="* -> *,!sources,!javadoc"/>-->
 
     <dependency org="snakeyaml" name="snakeyaml" rev="1.6" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.safehaus.jug" name="jug-asl" rev="2.0.0" conf="* -> *,!sources,!javadoc" />
     <dependency org="libthrift" name="libthrift" rev="0.5" conf="* -> *,!sources,!javadoc" />
-    <dependency org="org.apache.cassandra" name="apache-cassandra" rev="0.7.0-rc1" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.apache.cassandra" name="apache-cassandra" rev="0.7.0-beta3" conf="* -> *,!sources,!javadoc" />
 
     <dependency org="com.thoughtworks.paranamer" name="paranamer-ant" rev="2.1" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="* -> *,!sources,!javadoc"/>
