--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.9.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.9.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-2.9.1.jar" sourcepath="lib/lucene-core-2.9.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-highlighter-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-memory-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-misc-2.9.1.jar"/>
@@ -62,5 +62,6 @@
 	<classpathentry kind="lib" path="lib/jug-asl-2.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/apache-cassandra-0.7.0-beta3.jar" sourcepath="/cassandra-trunk"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="solandra-app"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
