--- a/build.xml
+++ b/build.xml
@@ -32,8 +32,8 @@
         <property name="lib"           location="lib" />
         <property name="cassandra.base" location="${basedir}"/>
 
-        <property name="solr.app"       location="solandra-app"/>
-        <property name="solr.resources" location="resources"/>
+        <property name="app"       location="solandra-app"/>
+        <property name="resources" location="resources"/>
 
         <!-- ivy properties -->
         <property name="ivy.version" value="2.1.0" />
@@ -51,7 +51,7 @@
           <mkdir dir="${build.test.classes}"/>
           <mkdir dir="${ivy.dir}" />
           <mkdir dir="${ivy.lib.dir}" />
-          <mkdir dir="${solr.app}" />
+          <mkdir dir="${app}" />
           <!--
               Allow Ivy to be disabled with "-Dnoivy=".
               It is kind of a hack to pretend that we already found it,
@@ -152,7 +152,7 @@
             <batchtest todir="${build}/output">
               <fileset dir="${build.test.classes}" includes="**/SolandraTest*" />
             </batchtest>
-            <jvmarg value="-Dsolr.solr.home=${solr.resources}"/>
+            <jvmarg value="-Dsolr.solr.home=${resources}"/>
             <jvmarg value="-Xmx1G"/>
           </junit>
           <fail if="testfailed" message="Some test(s) failed."/>
@@ -166,7 +166,7 @@
         <target name="clean">
           <delete dir="${build}" />
           <delete dir="${lib}" />
-          <delete dir="${solr.app}" />
+          <delete dir="${app}" />
           <delete file="solandra.jar" />
           <delete file="solandra-tests.jar" />
           <delete file="solandra.war" />
@@ -175,7 +175,7 @@
         <!-- ============================= -->
         <target name="war" depends="solandra.jar">
           <war destfile="solandra.war"
-               webxml="${solr.resources}/web.xml">
+               webxml="${resources}/solr/web.xml">
             <lib dir="${lib}">
               <exclude name="jetty*.jar" />
               <exclude name="servlet-api*.jar" />
@@ -187,37 +187,46 @@
             <lib dir="${cassandra.base}/build">
               <include name="**/*.jar" />
             </lib>
-	    <classes dir="${solr.resources}">
+	    <classes dir="${resources}">
 	      <include name="*.properties"/>
 	    </classes>
             <lib file="solandra.jar"/>
           </war>
         </target>
         <target name="dist" depends="war">
-          <delete dir="${solr.app}" />
-          <mkdir dir="${solr.app}"/>
-          <mkdir dir="${solr.app}/logs" />
-          <mkdir dir="${solr.app}/etc" />
-          <mkdir dir="${solr.app}/lib" />
-          <mkdir dir="${solr.app}/work" />
-          <copy todir="${solr.app}/lib">
-            <fileset dir="lib" includes="jetty*.jar,servlet*.jar,jsp*.jar"/>
+          <delete dir="${app}" />
+          <mkdir dir="${app}"/>
+          <mkdir dir="${app}/cassandra-tools"/>
+          <mkdir dir="${app}/cassandra-tools/lib"/>
+          <mkdir dir="${app}/logs" />
+          <mkdir dir="${app}/etc" />
+          <mkdir dir="${app}/lib" />
+          <mkdir dir="${app}/work" />
+          <copy todir="${app}/lib">
+            <fileset dir="${lib}" includes="jetty*.jar,servlet*.jar,jsp*.jar"/>
           </copy>
-          <copy todir="${solr.app}/etc">
-            <fileset dir="${solr.resources}" includes="jetty.xml,jetty-logging.xml,webdefault.xml"/>
+          <copy todir="${app}/etc">
+            <fileset dir="${resources}/solr" includes="jetty.xml,jetty-logging.xml,webdefault.xml"/>
           </copy>
-          <copy file="solandra.war" tofile="${solr.app}/webapps/solandra.war"/>
-          <copy todir="${solr.app}/solr/conf" overwrite="false">
-            <fileset dir="${solr.resources}" includes="solrconfig.xml,schema.xml,*.txt"/>
+          <copy file="solandra.war" tofile="${app}/webapps/solandra.war"/>
+          <copy todir="${app}/solr/conf" overwrite="false">
+            <fileset dir="${resources}/solr" includes="solrconfig.xml,schema.xml,*.txt"/>
           </copy>
-          <chmod dir="${solr.app}/solr/conf" perm="644" includes="**,*"/>
-          <!-- <copy file="${solr.resources}/log4j.properties" tofile="${solr.app}/log4j.properties"/>  -->
-          <copy file="${solr.resources}/run_server.sh" tofile="${solr.app}/run_server.sh"/>
-          <chmod dir="${solr.app}" perm="755" includes="run_server.sh"/>
-          <copy file="${solr.resources}/start.jar" tofile="${solr.app}/start.jar"/>
-          <copy file="${solr.resources}/cassandra.yaml" tofile="${solr.app}/cassandra.yaml"/>
+          <chmod dir="${app}/solr/conf" perm="644" includes="**,*"/>
+          <copy todir="${app}">
+	    <fileset dir="${resources}" includes="cassandra.yaml,solandra.in.sh,start.jar,start-solandra.sh"/>
+	  </copy>
+	  <copy todir="${app}/cassandra-tools">
+	    <fileset dir="${resources}/cassandra" includes="solandra.cml,cassandra-cli,nodetool,cassandra.in.sh,log4j-tools.properties"/>
+	  </copy>
+	  <copy todir="${app}/cassandra-tools/lib">
+	    <fileset dir="${lib}" includes="*.jar"/>
+	  </copy>
+          <chmod dir="${app}" perm="755" includes="start-solandra.sh"/>
+          <chmod dir="${app}/cassandra-tools" perm="755" includes="cassandra-cli,nodetool"/>
+
           <echo>Solandra successfully built</echo>
           <echo>You can excute the following command to start the server.</echo>
-          <echo>cd ${solr.app}; run_server.sh</echo>
+          <echo>cd ${app}; start-solandra.sh</echo>
         </target>
 </project>
