--- a/resources/cassandra.yaml
+++ b/resources/cassandra.yaml
@@ -41,7 +41,7 @@ partitioner: lucandra.dht.RandomPartitioner
 
 # directories where Cassandra should store data on disk.
 data_file_directories:
-    - /tmp/cassandra/data
+    - /tmp/cassandra-data/data
 
 # Addresses of hosts that are deemed contact points.
 # Cassandra nodes use this list of hosts to find each other and learn
@@ -113,10 +113,10 @@ column_index_size_in_kb: 64
 in_memory_compaction_limit_in_mb: 128
 
 # commit log
-commitlog_directory: /tmp/cassandra/commitlog
+commitlog_directory: /tmp/cassandra-data/commitlog
 
 # saved caches
-saved_caches_directory: /tmp/cassandra/saved_caches
+saved_caches_directory: /tmp/cassandra-data/saved_caches
 
 # Size to allow commitlog to grow to before creating a new segment
 commitlog_rotation_threshold_in_mb: 128
@@ -215,94 +215,3 @@ request_scheduler: org.apache.cassandra.scheduler.NoScheduler
 #  the index is at the cost of space.
 index_interval: 128
 
-# A ColumnFamily is the Cassandra concept closest to a relational table.
-#
-# Keyspaces are separate groups of ColumnFamilies.  Except in very
-# unusual circumstances you will have one Keyspace per application.
-#
-# Keyspace required parameters:
-# - name: name of the keyspace; "system" and "definitions" are
-#   reserved for Cassandra Internals.
-# - replica_placement_strategy: the class that determines how replicas
-#   are distributed among nodes.  Must implement IReplicaPlacementStrategy.
-#   Out of the box, Cassandra provides
-#     * org.apache.cassandra.locator.RackUnawareStrategy
-#     * org.apache.cassandra.locator.RackAwareStrategy
-#     * org.apache.cassandra.locator.DatacenterShardStrategy
-#
-#   RackUnawareStrategy is the simplest; it simply places the first
-#   replica at the node whose token is closest to the key (as determined
-#   by the Partitioner), and additional replicas on subsequent nodes
-#   along the ring in increasing Token order.
-#
-#   RackAwareStrategy is special cased for replication_factor of 3.  It
-#   places one replica in each of two datacenters, and the third on a
-#   different rack in in the first.
-#
-#   DatacenterShardStrategy is a generalization of RackAwareStrategy.
-#   For each datacenter, you can specify (in `datacenter.properties`)
-#   how many replicas you want on a per-keyspace basis.  Replicas are
-#   placed on different racks within each DC, if possible.
-#
-# - replication_factor: Number of replicas of each row
-# - column_families: column families associated with this keyspace
-#
-# ColumnFamily required parameters:
-# - name: name of the ColumnFamily.  Must not contain the character "-".
-# - compare_with: tells Cassandra how to sort the columns for slicing
-#   operations. The default is BytesType, which is a straightforward
-#   lexical comparison of the bytes in each column.  Other options are
-#   AsciiType, UTF8Type, LexicalUUIDType, TimeUUIDType, and LongType.
-#   You can also specify the fully-qualified class name to a class of
-#   your choice extending org.apache.cassandra.db.marshal.AbstractType.
-#
-# ColumnFamily optional parameters:
-# - keys_cached: specifies the number of keys per sstable whose
-#   locations we keep in memory in "mostly LRU" order.  (JUST the key
-#   locations, NOT any column values.) Specify a fraction (value less
-#   than 1) or an absolute number of keys to cache.  Defaults to 200000
-#   keys.
-# - rows_cached: specifies the number of rows whose entire contents we
-#   cache in memory. Do not use this on ColumnFamilies with large rows,
-#   or ColumnFamilies with high write:read ratios. Specify a fraction
-#   (value less than 1) or an absolute number of rows to cache.
-#   Defaults to 0. (i.e. row caching is off by default)
-# - comment: used to attach additional human-readable information about
-#   the column family to its definition.
-# - read_repair_chance: specifies the probability with which read
-#   repairs should be invoked on non-quorum reads.  must be between 0
-#   and 1. defaults to 1.0 (always read repair).
-# - preload_row_cache: If true, will populate row cache on startup.
-#   Defaults to false.
-#
-# NOTE: this keyspace definition is for demonstration purposes only.
-#       Cassandra will not load these definitions during startup. See
-#       http://wiki.apache.org/cassandra/FAQ#no_keyspaces for an explanation.
-
-
-
-keyspaces:
-    - name: L
-      replica_placement_strategy: org.apache.cassandra.locator.RackUnawareStrategy
-      replication_factor: 1
-      column_families:
-        - name: Docs
-          compare_with: BytesType
-          keys_cached: .9
-
-        - name: TI 
-          column_type: Super
-          compare_with: lucandra.VIntType
-          read_repair_chance: 0.1
-          keys_cached: .9
-          rows_cached: 10000
-     
-        - name: SI #schema info
-          column_type: Super
-          keys_cached: .5
-          rows_cached: .5
-          compare_with: BytesType
-
-        - name: TL #Term lists
-          keys_cached: .9
-          compare_with: BytesType
