--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<lucene.version>2.9.3</lucene.version>
 		<solr.version>1.4.0</solr.version>
 		<slf4j.version>1.6.1</slf4j.version>
-		<cassandra.version>0.7.0-rc1-SNAPSHOT-2010-10-25_12-57-56</cassandra.version>
+		<cassandra.version>0.7.0-beta3</cassandra.version>
 		<avro.version>1.4.0-fixes</avro.version>
 		<high.scale.version>1.1.2</high.scale.version>
 		<thrift.version>0.5</thrift.version>
@@ -57,10 +57,9 @@
 
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
-			<artifactId>cassandra</artifactId>
+			<artifactId>apache-cassandra</artifactId>
 			<version>${cassandra.version}</version>
 		</dependency>
-
 
 
 		<!-- our lucene depencies -->
@@ -252,86 +251,6 @@
 					</includes>
 				</configuration>
 			</plugin>
-
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>install libthrift</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<packaging>jar</packaging>
-							<groupId>libthrift</groupId>
-							<artifactId>libthrift</artifactId>
-							<version>${thrift.version}</version>
-							<file>${basedir}/lib/libthrift-${thrift.version}.jar</file>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install cassandra</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<packaging>jar</packaging>
-							<groupId>org.apache.cassandra</groupId>
-							<artifactId>cassandra</artifactId>
-							<version>${cassandra.version}</version>
-							<file>${basedir}/lib/apache-cassandra-${cassandra.version}.jar</file>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<updateReleaseInfo>true</updateReleaseInfo>
-					<repositoryId>maven.spidertracks.com.local</repositoryId>
-					<url>${st.deploy.dir}</url>
-				</configuration>
-
-				<executions>
-					<execution>
-						<id>deploy libthrift</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy-file</goal>
-						</goals>
-						<configuration>
-							<packaging>jar</packaging>
-							<groupId>libthrift</groupId>
-							<artifactId>libthrift</artifactId>
-							<version>${thrift.version}</version>
-							<file>${basedir}/lib/libthrift-${thrift.version}.jar</file>
-
-						</configuration>
-					</execution>
-					<execution>
-						<id>deploy cassandra</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy-file</goal>
-						</goals>
-						<configuration>
-							<packaging>jar</packaging>
-							<groupId>org.apache.cassandra</groupId>
-							<artifactId>cassandra</artifactId>
-							<version>${cassandra.version}</version>
-							<file>${basedir}/lib/apache-cassandra-${cassandra.version}.jar</file>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-
-
 		</plugins>
 	</build>
 
