--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>lucandra</groupId>
 	<artifactId>lucandra</artifactId>
-	<version>0.7.0-rc2-SNAPSHOT</version>
+	<version>1.0.0-0.7.0-beta3-SNAPSHOT</version>
 	<properties>
 		<lucene.version>2.9.3</lucene.version>
 		<solr.version>1.4.0</solr.version>
@@ -174,7 +174,7 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.15</version>
 			<type>jar</type>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -260,9 +260,15 @@
 						<cassandra.port>19160</cassandra.port>
 						<cassandra.framed>true</cassandra.framed>
 					</systemPropertyVariables>
+					
+					<excludes>
+						<exclude>**/*BenchmarkTest*.java</exclude>
+					</excludes>
 					<includes>
 						<include>**/*Test*.java</include>
 					</includes>
+					
+
 				</configuration>
 			</plugin>
 		</plugins>
