--- a/ivy.xml
+++ b/ivy.xml
@@ -36,7 +36,12 @@
     <dependency org="snakeyaml" name="snakeyaml" rev="1.6" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.safehaus.jug" name="jug-asl" rev="2.0.0" conf="* -> *,!sources,!javadoc" />
     <dependency org="libthrift" name="libthrift" rev="0.5" conf="* -> *,!sources,!javadoc" />
-    <dependency org="org.apache.cassandra" name="apache-cassandra" rev="0.7.0-beta3" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.apache.cassandra" name="apache-cassandra" rev="0.7.0-beta3" conf="* -> *,!sources,!javadoc">
+       <exclude module="hadoop-core"/>
+       <exclude module="hadoop-streaming"/>
+       <exclude module="avro"/>
+    </dependency>
+
 
     <dependency org="com.thoughtworks.paranamer" name="paranamer-ant" rev="2.1" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="* -> *,!sources,!javadoc"/>
@@ -47,8 +52,10 @@
 
     <dependency org="org.apache.avro" name="avro" rev="1.4.0" conf="* -> *,!sources,!javadoc">       
       <exclude module="ant"/>
+      <exclude module="core"/>
       <exclude module="ant-eclipse"/>
       <exclude module="hadoop-core"/>
+      <exclude module="hadoop-streaming"/>
       <exclude module="apache-rat"/>
       <exclude module="maven-ant-tasks"/>
       <exclude module="apache-rat"/>
